# gfx

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example-app/: Cargo.toml
example-app/src/: main.rs
recs-gfx/: Cargo.toml
recs-gfx/benches/: gfx_bench.rs
recs-gfx/proptest-regressions/: time.txt
recs-gfx/src/: camera.rs  camera_controller.rs  engine.rs  instance.rs  lib.rs  light.wgsl  model.rs  renderer.rs  resources.rs  shader.wgsl  state.rs  texture.rs  time.rs  uniform.rs  vertex.rs  window.rs
