[package]
name = "recs-gfx"
version = "0.1.0"
edition.workspace = true
authors = ["Martin Jonsson <martinjonsson01@gmail.com>"]

[lib]
bench = false # Using Criterion means we don't need ordinary cargo bench

[dependencies]
winit = "0.27"          # For window creation
env_logger = "0.10.0"   # Makes logging configurable via environment variables
log = "0.4"             # For lightweight logging
wgpu = "0.14"           # For GPU programming (interfaces with Direct3D, Vulkan, OpenGL)
rayon = "1.6.1"         # For CPU parallelism
num_cpus = "1.14.0"     # To get the number of CPU cores available

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }      # For benchmarking

[[bench]]
name = "gfx_bench"
harness = false
