[package]
name = "recs-gfx"
version = "0.1.0"
edition.workspace = true
authors = ["Martin Jonsson <martinjonsson01@gmail.com>"]

[lib]
bench = false # Using Criterion means we don't need ordinary cargo bench

[dependencies]
winit = "0.27.5"        # For window creation
tracing = "0.1.37"                      # For instrumenting to collect scoped, structured, and async-aware diagnostics
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] } # Tools for composing subscribers (to collect tracing data)
tracing-error = "0.2.0"                 # Enriches error handling with tracing diagnostic information
color-eyre = "0.6.2"                    # For pretty-printed error logging and tracing
wgpu = "0.14.2"         # For GPU programming (interfaces with Vulkan, Metal, and D3D11/12)
rayon = "1.6.1"         # For CPU parallelism
num_cpus = "1.14.0"     # To get the number of CPU cores available
bytemuck = { version = "1.4.1", features = ["derive"] }     # For casting to byte slices
image = { version = "0.24.5", features = ["png", "jpeg"] }  # For loading of images
anyhow = "1.0.67"       # For simple error handling
thiserror = "1.0.38"    # Macros for generating error enums/structs
cgmath = "0.18.0"       # For linear algebra
tobj = { version = "3.2.3", features = ["async"] }          # For .obj model format loading

[build-dependencies]
anyhow = "1.0.67"       # For simple error handling
fs_extra = "1.2.0"      # For extra file system functions
glob = "0.3.0"          # For querying the file system in a unix-manner

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }      # For benchmarking

[[bench]]
name = "gfx_bench"
harness = false
