[package]
name = "recs-gfx"
version = "0.1.0"
edition.workspace = true
authors = ["Martin Jonsson <martinjonsson01@gmail.com>"]

[lib]
bench = false # Using Criterion means we don't need ordinary cargo bench

[dependencies]
winit = "0.27.5"        # For window creation
tracing = "0.1.37"      # For instrumenting to collect scoped, structured, and async-aware diagnostics
color-eyre = "0.6.2"    # For pretty-printed error logging and tracing
wgpu = "0.14.2"         # For GPU programming (interfaces with Vulkan, Metal, and D3D11/12)
rayon = "1.6.1"         # For CPU parallelism
num_cpus = "1.14.0"     # To get the number of CPU cores available
bytemuck = { version = "1.4.1", features = ["derive"] }     # For casting to byte slices
image = { version = "0.24.5", features = ["png", "jpeg"] }  # For loading of images
thiserror = "1.0.38"    # Macros for generating error enums/structs
cgmath = "0.18.0"       # For linear algebra
tobj = { version = "3.2.3", features = ["async"] } # For .obj model format loading
palette = "0.6.1"       # For sRGB / RGB conversions
egui = "0.20.1"         # For basic GUIs
egui-wgpu = "0.20.0"    # To support rendering of GUIs from egui using wgpu
egui-winit = "0.20.1"   # To support winit for egui
derivative = "2.2.0"    # Better trait derives (e.g. derive Debug but ignore one field)
crossbeam-queue = "0.3.8" # A lock-free concurrent queue
crossbeam-channel = "0.5.6" # Multi-producer multi-consumer channels for message passing
ring-channel = "0.11.0" # A ring-buffer multi-producer multi-consumer channel for bounded message-queues
pollster = "0.2"        # To be able to block on async functions
itertools = "0.10.5"    # Helpers for working with iterators

[build-dependencies]
anyhow = "1.0.67"       # For simple error handling
fs_extra = "1.2.0"      # For extra file system functions
glob = "0.3.0"          # For querying the file system in a unix-manner

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] } # For benchmarking
proptest = "1.0.0"      # Property-based testing tools and harness
test-strategy = "0.2.1" # Prop-test macros that are more ergonomic than the ones from proptest
approx = "0.5.1"        # For approximate floating-point comparisons

[[bench]]
name = "gfx_bench"
harness = false
